--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2003-06-20  Daniel Egger  <degger@fhm.edu>
+            Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
+
+	* doc/install.texi (Building): Correct and improve statement
+	about parallel builds.
+
 2003-06-20  Eric Botcazou  <ebotcazou@libertysurf.fr>
 
 	* doc/install.texi (--with-gnu-as): Mention SPARC/Solaris and
