--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2003-06-20  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>
+
+	* configure.in (gcc_cv_as_gstabs_flag): Disable if assembler warns.
+	* configure: Regenerate.
+	Fixes PR driver/9362.
+
 2003-06-19  Vladimir Makarov  <vmakarov@redhat.com>
 
 	* haifa-sched.c (max_isse): Backport from the mainline.
