re PR c++/10888 (inlining failure for allocate in ~vector())
	PR c++/10888
	* tree-inline.c (expand_call_inline): Do not warn about failing to
	inline functions declared in system headers.
	* doc/invoke.texi (-Winline): Expand on documentation.

	PR c++/10888
	* g++.dg/warn/Winline-2.C: New test.

From-SVN: r68278

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,5 +1,8 @@
 2003-06-20  Mark Mitchell  <mark@codesourcery.com>
 
+	PR c++/10888
+	* g++.dg/warn/Winline-2.C: New test. 
+
 	PR c++/10845
 	* g++.dg/template/member3.C: New test.
 
