--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2003-06-20  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/10888
+	* tree-inline.c (expand_call_inline): Do not warn about failing to
+	inline functions declared in system headers.
+	* doc/invoke.texi (-Winline): Expand on documentation.
+
 2003-06-20  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>
 
 	* configure.in (gcc_cv_as_gstabs_flag): Disable if assembler warns.
