--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,12 @@
+2003-06-14  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
+
+	* doc/contrib.texi (Contributors): Use Windows instead of Win32.
+
+	Update Andreas Jaeger's entry.
+
+	Merge the two entries of Kaveh Ghazi, David Edelsohn, and
+	Loren J. Rittle.
+
 2003-06-20  Geoffrey Keating  <geoffk@apple.com>
 
 	PR c++/9393
