--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Sat Jun 21 13:37:52 CEST 2003  Jan Hubicka  <jh@suse.cz>
+
+	* i386.c (ix86_va_arg): Fix allocation of temporary slot.
+
 2003-06-14  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
 
 	* doc/contrib.texi (Contributors): Use Windows instead of Win32.
