--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2003-06-22  Kazu Hirata  <kazu@cs.umass.edu>
+
+	* doc/rtl.texi: Fix the @findex for pre_modify.
+
 Sat Jun 21 13:37:52 CEST 2003  Jan Hubicka  <jh@suse.cz>
 
 	* i386.c (ix86_va_arg): Fix allocation of temporary slot.
