* doc/invoke.texi: Document dump, .cfg.
From-SVN: r68344

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2003-06-22  Kazu Hirata  <kazu@cs.umass.edu>
 
+	* doc/invoke.texi: Document dump, .cfg.
+
+2003-06-22  Kazu Hirata  <kazu@cs.umass.edu>
+
 	* doc/invoke.texi: Alphabetize dump options.
 
 2003-06-22  Kazu Hirata  <kazu@cs.umass.edu>
