--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2003-06-23  Kazu Hirata  <kazu@cs.umass.edu>
+
+	* doc/invoke.texi: Document dump options, dT and dW.
+
 2003-06-23  Andreas Schwab  <schwab@suse.de>
 
 	* doc/invoke.texi: Remove leading `-' from options in index.
