--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2003-06-23  Jakub Jelinek  <jakub@redhat.com>
+
+	* g++.dg/opt/operator1.C: New test.
+
 2003-06-21  Gabriel Dos Reis <gdr@integrable-solutions.net>
 
 	* g++.old-deja/g++.benjamin/16077.C: Add -Wconversion option.
