--- a/gcc/doc/contrib.texi
+++ b/gcc/doc/contrib.texi
@@ -885,9 +885,9 @@ Gilles Zunino for help porting Java to Irix.
 
 @end itemize
 
-
-We'd also like to thank the folks who have contributed time and energy in
-testing GCC:
+In addition to the above, all of which also contributed time and energy in
+testing GCC, we would like to thank the following for their contributions
+to testing:
 
 @itemize @bullet
 @item
@@ -924,12 +924,6 @@ Frank Braun
 Rodney Brown
 
 @item
-Joe Buck
-
-@item
-Craig Burley
-
-@item
 Sidney Cadot
 
 @item
@@ -937,9 +931,6 @@ Bradford Castalia
 
 @item
 Ralph Doncaster
-
-@item
-Ulrich Drepper
 
 @item
 Richard Emberson
@@ -990,19 +981,7 @@ Amancio Hasty
 Bryan W. Headley
 
 @item
-Kate Hedstrom
-
-@item
-Richard Henderson
-
-@item
 Kevin B. Hendricks
-
-@item
-Manfred Hollstein
-
-@item
-Kamil Iskra
 
 @item
 Joep Jansen
@@ -1020,28 +999,13 @@ Tobias Kuipers
 Anand Krishnaswamy
 
 @item
-Jeff Law
-
-@item
-Robert Lipe
-
-@item
 llewelly
 
 @item
 Damon Love
 
 @item
-Dave Love
-
-@item
-H.J. Lu
-
-@item
 Brad Lucier
-
-@item
-Mumit Khan
 
 @item
 Matthias Klose
@@ -1051,12 +1015,6 @@ Martin Knoblauch
 
 @item
 Jesse Macnish
-
-@item
-David Miller
-
-@item
-Toon Moene
 
 @item
 Stefan Morrell
@@ -1069,9 +1027,6 @@ Matthias Mueller
 
 @item
 Pekka Nikander
-
-@item
-Alexandre Oliva
 
 @item
 Jon Olson
@@ -1095,9 +1050,6 @@ Paul Reilly
 Tom Reilly
 
 @item
-Loren J. Rittle
-
-@item
 Torsten Rueger
 
 @item
@@ -1107,22 +1059,13 @@ Danny Sadinoff
 Marc Schifer
 
 @item
-Peter Schmid
-
-@item
 David Schuler
 
 @item
 Vin Shelton
 
 @item
-Franz Sirl
-
-@item
 Tim Souder
-
-@item
-Mike Stump
 
 @item
 Adam Sulmicki
@@ -1132,9 +1075,6 @@ George Talbot
 
 @item
 Gregory Warnes
-
-@item
-Carlo Wood
 
 @item
 David E. Young
