--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2003-06-23  Jakub Jelinek  <jakub@redhat.com>
+
+	* config/s390/s390.c (s390_output_mi_thunk): Avoid .plt in -m31
+	mode, as it requires pic register loaded.
+
 2003-06-23  Kazu Hirata  <kazu@cs.umass.edu>
 
 	* doc/extend.texi: Fix typos.
