--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,9 @@
+2003-06-23  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/5754
+	* parse.y (structsp): Improve error handling of invalid nested
+	template classes.
+
 2003-06-23  Jakub Jelinek  <jakub@redhat.com>
 
 	* mangle.c: Include ggc.h, gt-cp-mangle.h.
