--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2003-06-24  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/5754
+	* g++.dg/parse/crash6.C: New test.
+
 2003-06-23  Jakub Jelinek  <jakub@redhat.com>
 
 	* g++.dg/opt/operator1.C: New test.
