--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2003-06-24  Jakub Jelinek  <jakub@redhat.com>
+
+	* builtins.c (expand_builtin_strcpy): Don't evaluate side-effects in
+	src twice.
+
 2003-06-23  Jakub Jelinek  <jakub@redhat.com>
 
 	* config/s390/s390.c (s390_output_mi_thunk): Avoid .plt in -m31
