--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2003-06-24  Falk Hueffner  <falk.hueffner@student.uni-tuebingen.de>
+
+        PR target/11260
+        * config/alpha/alpha.md (sqrtdf2): Fix operand substitution.
+
 2003-06-24  Jakub Jelinek  <jakub@redhat.com>
 
 	* builtins.c (expand_builtin_strcpy): Don't evaluate side-effects in
