--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2003-06-25  Josef Zlomek  <zlomekj@suse.cz>
+
+	* dwarf2out.c (gen_field_die): Return if type of decl is error mark.
+
 2003-06-24  Falk Hueffner  <falk.hueffner@student.uni-tuebingen.de>
 
         PR target/11260
