--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2003-06-25  Richard Sandiford  <rsandifo@redhat.com>
+
+	* gcc.c-torture/compile/20030625-1.c: New test.
+
 2003-06-25  Josef Zlomek  <zlomekj@suse.cz>
 
 	* gcc.dg/20030625-1.c: New test.
