--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2003-06-24  Jerry Quinn  <jlquinn@optonline.net>
+
+	PR other/11280
+	* gcc/doc/invoke.texi (Optimization Options): Remove -Os from
+	-freorder-functions description.
+
 2003-06-25  Richard Sandiford  <rsandifo@redhat.com>
 
 	PR target/11084
