re PR bootstrap/3163 ([3.3 Only] gcc/aclocal.m4 mmap test fails on UnixWare 7.1.1)
	PR bootstrap/3163
	* aclocal.m4 (AC_FUNC_MMAP_ANYWHERE, AC_FUNC_MMAP_FILE): Delete.
	(gcc_AC_FUNC_MMAP_BLACKLIST): New.
	* configure.in: Check for sys/mman.h and mmap in AC_CHECK_HEADERS
	and AC_CHECK_FUNCS lists, respectively.  Use
	gcc_AC_FUNC_MMAP_BLACKLIST, not AC_FUNC_MMAP_ANYWHERE nor
	AC_FUNC_MMAP_FILE.
	* configure, config.in: Regenerate.

	* ggc-page.c (init_gcc): Call fatal_io_error, not abort,
	if opening /dev/zero fails.

From-SVN: r68504

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,17 @@
+2003-06-25  Zack Weinberg  <zack@codesourcery.com>
+
+	PR bootstrap/3163
+	* aclocal.m4 (AC_FUNC_MMAP_ANYWHERE, AC_FUNC_MMAP_FILE): Delete.
+	(gcc_AC_FUNC_MMAP_BLACKLIST): New.
+	* configure.in: Check for sys/mman.h and mmap in AC_CHECK_HEADERS
+	and AC_CHECK_FUNCS lists, respectively.  Use
+	gcc_AC_FUNC_MMAP_BLACKLIST, not AC_FUNC_MMAP_ANYWHERE nor
+	AC_FUNC_MMAP_FILE.
+	* configure, config.in: Regenerate.
+
+	* ggc-page.c (init_gcc): Call fatal_io_error, not abort,
+	if opening /dev/zero fails.
+
 2003-06-25  Roger Sayle  <roger@eyesopen.com>
 
 	* builtins.c (expand_builtin_strcpy): Construct new argument list
@@ -32,8 +46,8 @@
 
 2003-06-24  Falk Hueffner  <falk.hueffner@student.uni-tuebingen.de>
 
-        PR target/11260
-        * config/alpha/alpha.md (sqrtdf2): Fix operand substitution.
+	PR target/11260
+	* config/alpha/alpha.md (sqrtdf2): Fix operand substitution.
 
 2003-06-24  Jakub Jelinek  <jakub@redhat.com>
 
@@ -51,7 +65,7 @@
 	* doc/md.texi: Likewise.
 
 2003-06-23  Roger Sayle  <roger@eyesopen.com>
-            Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
+	    Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
 
 	* doc/contrib.texi (Contributors): Add a note on testing and
 	remove duplicates from testers list.
@@ -110,7 +124,7 @@ Sat Jun 21 13:37:52 CEST 2003  Jan Hubicka  <jh@suse.cz>
 	* flags.h (flag_random_seed): Declare.
 	* configure: Regenerate.
 	* config.in: Regenerate.
-	
+
 2003-06-20  Mark Mitchell  <mark@codesourcery.com>
 
 	PR c++/10888
@@ -138,7 +152,7 @@ Sat Jun 21 13:37:52 CEST 2003  Jan Hubicka  <jh@suse.cz>
 	(sched_init): Check cached_issue_rate.
 
 2003-06-20  Daniel Egger  <degger@fhm.edu>
-            Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
+	    Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
 
 	* doc/install.texi (Building): Correct and improve statement
 	about parallel builds.
@@ -245,18 +259,18 @@ Sat Jun 21 13:37:52 CEST 2003  Jan Hubicka  <jh@suse.cz>
 
 2003-06-12  Richard Henderson  <rth@redhat.com>
 
-        PR target/11089
-        * config/i386/i386.md (sse_movaps): Use an expander to force
-        one operand to be a register.
-        (sse_movups): Likewise.
+	PR target/11089
+	* config/i386/i386.md (sse_movaps): Use an expander to force
+	one operand to be a register.
+	(sse_movups): Likewise.
 
 2003-06-12  Richard Henderson  <rth@redhat.com>
 
-        PR middle-end/10557
-        * rtlanal.c (subreg_offset_representable_p): Relax subreg check.
+	PR middle-end/10557
+	* rtlanal.c (subreg_offset_representable_p): Relax subreg check.
 
 2003-06-13  Eric Botcazou  <ebotcazou@libertysurf.fr>
-            Christian Ehrhardt <ehrhardt@mathematik.uni-ulm.de>
+	    Christian Ehrhardt <ehrhardt@mathematik.uni-ulm.de>
 
 	PR target/10142
 	* config/sparc/sparc.c (function_arg_record_value_parms): Add
@@ -283,8 +297,8 @@ Sat Jun 21 13:37:52 CEST 2003  Jan Hubicka  <jh@suse.cz>
 2003-06-12  Richard Henderson  <rth@redhat.com>
 
 	PR target/7594
-        * config/m68k/m68k.md (zero_extendhisi2): Use gen_lowpart_SUBREG.
-        (zero_extendqihi2, zero_extendqisi2): Likewise.
+	* config/m68k/m68k.md (zero_extendhisi2): Use gen_lowpart_SUBREG.
+	(zero_extendqihi2, zero_extendqisi2): Likewise.
 
 2003-06-12  Richard Henderson  <rth@redhat.com>
 
@@ -311,8 +325,8 @@ Sat Jun 21 13:37:52 CEST 2003  Jan Hubicka  <jh@suse.cz>
 
 2003-06-11  Richard Henderson  <rth@redhat.com>
 
-        * stmt.c (expand_asm_operands): Don't warn for memories with
-        queued addresses.
+	* stmt.c (expand_asm_operands): Don't warn for memories with
+	queued addresses.
 
 2003-06-11  Andrew Pinski  <pinskia@physics.uc.edu>
 
@@ -333,26 +347,26 @@ Sat Jun 21 13:37:52 CEST 2003  Jan Hubicka  <jh@suse.cz>
 2003-06-09  Richard Henderson  <rth@redhat.com>
 
 	2003-05-11  Ulrich Weigand  <uweigand@de.ibm.com>
-        * except.c (EH_RETURN_STACKADJ_RTX): Do not define.
-        (EH_RETURN_HANDLER_RTX): Likewise.
-        (expand_builtin_eh_return): Do not copy stack adjustment
-        if EH_RETURN_STACKADJ_RTX is not defined.
-        (expand_eh_return): Likewise.  Also, do not pass stack
-        adjustment as argument to the eh_return pattern.
-        * except.h (MUST_USE_SJLJ_EXCEPTIONS): Do not define just
-        because EH_RETURN_STACKADJ_RTX is not defined.
-        * unwind-dw.c (uw_update_context_1): If EH_RETURN_STACKADJ_RTX
-        is not defined, treat stack pointer like a regular register.
-        (uw_init_context_1): Set up fake initial stack pointer register.
-        (uw_install_context_1): Do not compute stack adjustment if
-        EH_RETURN_STACKADJ_RTX is not defined.
+	* except.c (EH_RETURN_STACKADJ_RTX): Do not define.
+	(EH_RETURN_HANDLER_RTX): Likewise.
+	(expand_builtin_eh_return): Do not copy stack adjustment
+	if EH_RETURN_STACKADJ_RTX is not defined.
+	(expand_eh_return): Likewise.  Also, do not pass stack
+	adjustment as argument to the eh_return pattern.
+	* except.h (MUST_USE_SJLJ_EXCEPTIONS): Do not define just
+	because EH_RETURN_STACKADJ_RTX is not defined.
+	* unwind-dw.c (uw_update_context_1): If EH_RETURN_STACKADJ_RTX
+	is not defined, treat stack pointer like a regular register.
+	(uw_init_context_1): Set up fake initial stack pointer register.
+	(uw_install_context_1): Do not compute stack adjustment if
+	EH_RETURN_STACKADJ_RTX is not defined.
 
-        * config/i386/i386.md ("eh_return"): Remove first argument.
-        * config/mips/mips.md ("eh_return"): Likewise.
-        * config/rs6000/rs6000.md ("eh_return"): Likewise.
-        * config/sh/sh.md ("eh_return"): Likewise.
+	* config/i386/i386.md ("eh_return"): Remove first argument.
+	* config/mips/mips.md ("eh_return"): Likewise.
+	* config/rs6000/rs6000.md ("eh_return"): Likewise.
+	* config/sh/sh.md ("eh_return"): Likewise.
 
-        * config/s390/s390.h (EH_RETURN_STACKADJ_RTX): Remove.
+	* config/s390/s390.h (EH_RETURN_STACKADJ_RTX): Remove.
 
 2003-06-08  Richard Henderson  <rth@redhat.com>
 
@@ -360,11 +374,11 @@ Sat Jun 21 13:37:52 CEST 2003  Jan Hubicka  <jh@suse.cz>
 
 2003-06-08  Richard Henderson  <rth@redhat.com>
 
-        * expr.h (EXPAND_MEMORY): New.
-        * expr.c (expand_expr): Check it.
-        * stmt.c (expand_asm_operands): Provide it when the constraint
-        requires a memory.  Warn for memory input constraints without
-        a memory operand.
+	* expr.h (EXPAND_MEMORY): New.
+	* expr.c (expand_expr): Check it.
+	* stmt.c (expand_asm_operands): Provide it when the constraint
+	requires a memory.  Warn for memory input constraints without
+	a memory operand.
 
 2003-06-07  Richard Henderson  <rth@redhat.com>
 
@@ -403,12 +417,12 @@ Sat Jun 21 13:37:52 CEST 2003  Jan Hubicka  <jh@suse.cz>
 	-D_GNU_SOURCE.
 
 2003-06-05  David Miller  <davem@redhat.com>
-            Richard Henderson  <rth@redhat.com>
+	    Richard Henderson  <rth@redhat.com>
 
-        * optabs.c (HAVE_conditional_trap): Provide default.
-        (gen_conditional_trap): Likewise.
-        (init_optabs): Merge init_traps.
-        (gen_cond_trap): Use prepare_operand.  Restructure and avoid ifdef.
+	* optabs.c (HAVE_conditional_trap): Provide default.
+	(gen_conditional_trap): Likewise.
+	(init_optabs): Merge init_traps.
+	(gen_cond_trap): Use prepare_operand.  Restructure and avoid ifdef.
 
 2003-06-05  Eric Botcazou  <ebotcazou@libertysurf.fr>
 
@@ -416,7 +430,7 @@ Sat Jun 21 13:37:52 CEST 2003  Jan Hubicka  <jh@suse.cz>
 	constraints related to floating-point registers on SPARC.
 
 2003-06-05  Eric Botcazou  <ebotcazou@libertysurf.fr>
-            Paolo Bonzini  <bonzini@gnu.org>
+	    Paolo Bonzini  <bonzini@gnu.org>
 
 	PR target/10663
 	* configure.in (HAVE_LD_RO_RW_SECTION_MIXING): Redirect
@@ -485,12 +499,12 @@ Sat Jun 21 13:37:52 CEST 2003  Jan Hubicka  <jh@suse.cz>
 2003-06-03  Richard Henderson  <rth@redhat.com>
 
 	PR target/10673
-        * config/i386/i386.c (ix86_split_long_move): Fix base register
-        mode for XFmode splits for TARGET_64BIT.
+	* config/i386/i386.c (ix86_split_long_move): Fix base register
+	mode for XFmode splits for TARGET_64BIT.
 
 2003-06-02  Kazuhiro Inaoka  <inaoka.kazuhiro@renesas.com>
 
-        * gcc/config.gcc Add support multilib parts for m32rx processor.
+	* gcc/config.gcc Add support multilib parts for m32rx processor.
 
 2003-06-01  Eric Botcazou  <ebotcazou@libertysurf.fr>
 
@@ -503,9 +517,9 @@ Sat Jun 21 13:37:52 CEST 2003  Jan Hubicka  <jh@suse.cz>
 	* rtl.def (CONST_DOUBLE): Update comment.
 
 2003-06-01  Seth Arnold  <sarnold@wirex.com>
-            Aldy Hernandez  <aldyh@redhat.com>
+	    Aldy Hernandez  <aldyh@redhat.com>
 
-	PR10871	    
+	PR10871
 	* config/rs6000/rs6000.c (rs6000_stack_info): Do not add
 	vrsave_size twice.
 
@@ -663,7 +677,7 @@ Fri May 23 20:55:39 CEST 2003  Jan Hubicka  <jh@suse.cz>
 
 2003-05-06  Eric Christopher  <echristo@redhat.com>
 
-        * config/mips/linux.h: Fix typo.
+	* config/mips/linux.h: Fix typo.
 
 2003-05-06  Ulrich Weigand  <uweigand@de.ibm.com>
 
@@ -694,25 +708,25 @@ Fri May 23 20:55:39 CEST 2003  Jan Hubicka  <jh@suse.cz>
 	* doc/install.texi (mips-*-*):  Add note about libstdc++.
 
 2003-05-05  Mark Mitchell  <mark@codesourcery.com>
-            Kean Johnston <jkj@sco.com>
-	
+	    Kean Johnston <jkj@sco.com>
+
 	* toplev.c (check_global_declarations): Do not warn about unused
 	static consts.
 
 2003-05-05  Richard Henderson  <rth@redhat.com>
 
-        * builtins.c (expand_builtin) <BUILT_IN_DWARF_FP_REGNUM>: Remove.
-        <BUILT_IN_DWARF_SP_COLUMN>: New.
-        * builtins.def (BUILT_IN_DWARF_FP_REGNUM): Remove.
-        (BUILT_IN_DWARF_SP_COLUMN): New.
-        * dwarf2out.c (expand_builtin_dwarf_fp_regnum): Remove.
-        (expand_builtin_dwarf_sp_column): New.
-        * except.h: Update to match.
-        * unwind-dw2.c (execute_stack_op): Correct stack push typo.
-        (execute_cfa_program): Record location expression address
-        before extracting length.
-        (uw_update_context_1): Install old CFA into stack pointer column.
-        (uw_init_context_1): Set cfa_reg to stack pointer column.
+	* builtins.c (expand_builtin) <BUILT_IN_DWARF_FP_REGNUM>: Remove.
+	<BUILT_IN_DWARF_SP_COLUMN>: New.
+	* builtins.def (BUILT_IN_DWARF_FP_REGNUM): Remove.
+	(BUILT_IN_DWARF_SP_COLUMN): New.
+	* dwarf2out.c (expand_builtin_dwarf_fp_regnum): Remove.
+	(expand_builtin_dwarf_sp_column): New.
+	* except.h: Update to match.
+	* unwind-dw2.c (execute_stack_op): Correct stack push typo.
+	(execute_cfa_program): Record location expression address
+	before extracting length.
+	(uw_update_context_1): Install old CFA into stack pointer column.
+	(uw_init_context_1): Set cfa_reg to stack pointer column.
 
 2003-05-05  David O'Brien  <obrien@FreeBSD.org>
 
