--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2003-06-27  Andreas Schwab  <schwab@suse.de>
+
+	* config.gcc (m68k-*-linux*): Don't override extra_parts and
+	gnu_ld, use the generic *-*-linux* settings instead.
+
 2003-06-26  Roger Sayle  <roger@eyesopen.com>
 
 	PR optimization/11054
