--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-06-27  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>
+
+	* configure.in: Don't pass --with-stabs for mips*-sgi-irix6*o32.
+
 2003-06-17  Kazu Hirata  <kazu@cs.umass.edu>
 
 	* MAINTAINERS (Write After Approval): Remove Andrew Haley.
