--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,20 @@
+2003-06-27  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>
+
+	* config/mips/mips.md (trap): Use break 0 when !TARGET_GAS.
+
+	* config/mips/iris6-o32.h (MIPS_ISA_DEFAULT): Remove.
+	(MIPS_CPU_STRING_DEFAULT): Redefine to mips2.
+
+	* config/mips/mips.c (TARGET_ASM_UNALIGNED_DI_OP) [TARGET_IRIX5 &&
+	!TARGET_IRIX6]: Define as NULL.
+
+	* config/mips/iris5gas.h (MDEBUG_ASM_SPEC): Override to match
+	DWARF 2 default.
+
+	* config/mips/dbxmdebug.h: New file.
+	* config.gcc (mips-sgi-irix6*o32, mips-sgi-irix5*): Use it with
+	gas and --with-stabs.
+
 2003-06-27  Andreas Schwab  <schwab@suse.de>
 
 	* config.gcc (m68k-*-linux*): Don't override extra_parts and
