--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2003-06-26  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/11332
+	* g++.dg/expr/static_cast2.C: New test.
+
 2003-06-25  Mark Mitchell  <mark@codesourcery.com>
 
 	PR c++/10990
