--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,5 +1,8 @@
 2003-06-27  Mark Mitchell  <mark@codesourcery.com>
 
+	PR c++/10468
+	* pt.c (tsubst): Handle qualified TYPEOF_TYPEs correctly.
+
 	PR c++/10796
 	* decl.c (finish_enum): Implement DR377.
 
