--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,9 @@
+2003-06-30  Giovanni Bajo <giovannibajo@libero.it>
+
+        PR c++/11106
+        * error.c (dump_decl): Call dump_decl to dump the DECL_NAME for a
+        USING_DECL, instead of print_tree_identifier.
+
 2003-06-27  Mark Mitchell  <mark@codesourcery.com>
 
 	PR c++/10468
