--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2003-06-30  Giovanni Bajo <giovannibajo@libero.it>
+
+        PR c++/11106
+        * g++.dg/other/error5.C: New test.
+
 2003-06-27  Mark Mitchell  <mark@codesourcery.com>
 
 	PR c++/10468
