--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2003-06-30  Giovanni Bajo  <giovannibajo@libero.it>
+
+        * mangle.c (write_expression): Exit gracefully when trying to
+        mangle a CALL_EXPR.
+
 2003-06-30  Giovanni Bajo <giovannibajo@libero.it>
 
         PR c++/11106
