--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2003-06-30  Giovanni Bajo  <giovannibajo@libero.it>
+
+        * g++.dg/other/error6.C: New test.
+
 2003-06-30  Giovanni Bajo <giovannibajo@libero.it>
 
         PR c++/11106
