--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2003-07-01  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/9559
+	* g++.dg/init/static1.C: New test.
+
 2003-06-30  Giovanni Bajo  <giovannibajo@libero.it>
 
         * g++.dg/other/error6.C: New test.
