--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2003-07-01  Kazu Hirata  <kazu@cs.umass.edu>
+
+	* doc/contrib.texi: Fix typos.
+	* doc/sourcebuild.texi: Likewise.
+
 2003-06-29  Aaron W. LaFramboise  <awlaframboise@aol.com>
 
 	* config/i386/gthr-win32.h (__GTHREAD_HIDE_WIN32API): Define to 1.
