re PR c++/11149 (ICE on error when instantiation with call function of a base type)
	PR c++/11149
	* call.c (resolve_scoped_fn_name): Check that the qualifying scope
	is a class type.

	PR c++/11149
	* g++.dg/lookup/scoped6.C: New test.

From-SVN: r68781

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,5 +1,10 @@
 2003-07-01  Mark Mitchell  <mark@codesourcery.com>
 
+	PR c++/11149
+	* g++.dg/lookup/scoped6.C: New test.
+
+2003-07-01  Mark Mitchell  <mark@codesourcery.com>
+
 	PR c++/9559
 	* g++.dg/init/static1.C: New test.
 
