--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,5 +1,11 @@
 2003-07-01  Mark Mitchell  <mark@codesourcery.com>
 
+	PR c++/11149
+	* call.c (resolve_scoped_fn_name): Check that the qualifying scope
+	is a class type.
+
+2003-07-01  Mark Mitchell  <mark@codesourcery.com>
+
 	PR c++/9559
 	* decl2.c (grokfield): Do not build NOP_EXPRs around the
 	error_mark_node.
