--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,5 +1,8 @@
 2003-07-01  Mark Mitchell  <mark@codesourcery.com>
 
+	PR c++/11137
+	* g++.dg/init/attrib1.C: New test.
+
 	PR c++/11149
 	* g++.dg/lookup/scoped6.C: New test.
 
