--- a/libstdc++-v3/ChangeLog
+++ b/libstdc++-v3/ChangeLog
@@ -1,3 +1,10 @@
+2003-07-01  Roger Sayle  <roger@eyesopen.com>
+
+	* acinclude.m4 (GLIBCPP_CHECK_STDLIB_SUPPORT): Fix typo in CXXFLAGS.
+	(GLIBCPP_CHECK_MATH_SUPPORT): Likewise.
+	* aclocal.m4: Regenerate.
+	* configure: Regenerate.
+
 2003-06-27  Matthias Klose  <doko@debian.org>
 
 	* testsuite/Makefile.am (check-abi, check-abi-verbose): Save
