inclhack.def (irix_stdio_va_list): Apply to IRIX 6.5 <internal/stdio_core.h> too.
	* fixinc/inclhack.def (irix_stdio_va_list): Apply to IRIX 6.5
	<internal/stdio_core.h> too.
	(stdio_va_list): Apply to IRIX 6.5 <internal/stdio_core.h> and
	<internal/wchar_core.h> too.
	Substitute va_list uses in inline definition.
	* fixinc/fixincl.x: Regenerate.

From-SVN: r68812

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,12 @@
+2003-07-02  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>
+
+	* fixinc/inclhack.def (irix_stdio_va_list): Apply to IRIX 6.5
+	<internal/stdio_core.h> too.
+	(stdio_va_list): Apply to IRIX 6.5 <internal/stdio_core.h> and
+	<internal/wchar_core.h> too.
+	Substitute va_list uses in inline definition.
+	* fixinc/fixincl.x: Regenerate.
+
 2003-07-01  Richard Henderson  <rth@redhat.com>
 	    (blame to: Loren James Rittle  <ljrittle@acm.org>)
 
