--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2003-06-30  Giovanni Bajo  <giovannibajo@libero.it>
+
+        * g++.dg/other/error5.C: Change line number of expected error.
+
 2003-07-01  Mark Mitchell  <mark@codesourcery.com>
 
 	PR c++/11137
