--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,5 +1,11 @@
 2003-07-01  Mark Mitchell  <mark@codesourcery.com>
 
+	PR c++/6949
+	* decl2.c (grokfield): Create TEMPLATE_DECLs for methods in local
+	classes.
+
+2003-07-01  Mark Mitchell  <mark@codesourcery.com>
+
 	* call.c (resolve_scoped_fn_name): Return error_mark_node for
 	erroneous cases.
 
