re PR rtl-optimization/11381 (volatile memory access optimized away)
	PR optimization/11381
	* simplify-rtx.c (simplify_relational_operation): Check that
	two equal operands have no side-effects before simplifying
	the comparison.

From-SVN: r68871

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2003-07-03  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
+	* gcc.dg/i386-volatile-1.c: New test.
+
 2003-07-01  Mark Mitchell  <mark@codesourcery.com>
 
 	PR c++/6949
