--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2003-07-03  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
+	PR optimization/11381
+	* simplify-rtx.c (simplify_relational_operation): Check that
+	two equal operands have no side-effects before simplifying
+	the comparison.
+
 2003-07-01  Zack Weinberg  <zack@codesourcery.com>
 
 	PR 2873
