re PR target/10700 (ICE in copy_to_mode_reg on 64-bit targets)
	PR target/10700
	* fold-const.c (extract_muldiv_1): There's nothing that can be done
	if the expression is a SAVE_EXPR.

	* gcc.c-torture/compile/20030703-1.c: New test case.

From-SVN: r68880

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2003-07-03  Roger Sayle  <roger@eyesopen.com>
+
+	PR target/10700
+	* gcc.c-torture/compile/20030703-1.c: New test case.
+
 2003-07-03  Eric Botcazou  <ebotcazou@libertysurf.fr>
 
 	* gcc.dg/i386-volatile-1.c: New test.
