--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,12 @@
+2003-07-03  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
+	PR optimization/11304
+	Backport from mainline:
+
+	2003-04-18  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
+
+	* cfgcleanup.c (flow_find_cross_jump): Use INSN_P, not active_insn_p.
+
 2003-07-03  Roger Sayle  <roger@eyesopen.com>
 
 	PR target/10700
