--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2003-07-03  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
+	* gcc.dg/i386-call-1.c: New test.
+
 2003-07-03  Roger Sayle  <roger@eyesopen.com>
 
 	PR target/10700
