--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2003-07-04  H.J. Lu <hongjiu.lu@intel.com>
+
+	* Makefile.in: Replace PWD with PWD_COMMAND.
+
 2003-07-03  Eric Botcazou  <ebotcazou@libertysurf.fr>
 
 	PR optimization/11304
