re PR c++/11431 (static_cast behavior with subclasses when default constructor available)
	PR c++/11431
	* typeck.c (build_static_cast): Check for reference conversions
	earlier.

	PR c++/11431
	* g++.dg/expr/static_cast3.C: New test.

From-SVN: r68991

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,9 @@
+2003-07-05  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/11431
+	* typeck.c (build_static_cast): Check for reference conversions
+	earlier.
+
 2003-07-01  Mark Mitchell  <mark@codesourcery.com>
 
 	PR c++/6949
