re PR c++/11345 (ICE in build_base_path)
	PR c++/11345
	* search.c (lookup_base_r): Remove is_non_public and
	within_current_scope parameters.  Remove other dead code.
	(lookup_base): Adjust call to lookup_base_r.
	(adjust_result_of_qualified_name_lookup): Improve comment.
	* semantics.c (finish_call_expr): Use maybe_dummy_object.

	PR c++/11345
	* g++.old-deja/g++.jason/access8.C: New test.

From-SVN: r69018

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2003-07-06  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/11345
+	* g++.old-deja/g++.jason/access8.C: New test.
+
 2003-07-05  Mark Mitchell  <mark@codesourcery.com>
 
 	PR c++/11431
